--- a/src/app.scss
+++ b/src/app.scss
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Cabin:700|Montserrat:400');
 
 :root {
-	--text: #090c03;
-	--background: #f6f5f3;
-	--border: #e7e5df;
+	--text: #1a1c16;
+	--background: #fcf9f6;
+	--border: #dcd9d7;
 	--primary: #bcc2ae;
-	--secondary: #afc0bb;
-	--accent: #90a4a7;
+	--secondary: #e0e0d6;
+	--accent: #b3c3bf;
+	--error: #ffdad6;
 }
 
 html,
@@ -16,11 +17,7 @@ body {
 	padding: 0;
 	box-sizing: border-box;
 
-	background: hsla(69, 17%, 84%, 1);
-	background: linear-gradient(315deg, hsla(69, 17%, 84%, 1) 0%, hsla(48, 56%, 96%, 1) 100%);
-	background: -moz-linear-gradient(315deg, hsla(69, 17%, 84%, 1) 0%, hsla(48, 56%, 96%, 1) 100%);
-	background: -webkit-linear-gradient(315deg, hsla(69, 17%, 84%, 1) 0%, hsla(48, 56%, 96%, 1) 100%);
-	background-attachment: fixed;
+	background-color: var(--background);
 }
 
 body {
