--- a/static/global-styles.css
+++ b/static/global-styles.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Cabin&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+@import "tailwindcss";
 
-:root {
+@theme default {
 	--text-scaling: 1.125;
 	--base-font-color: var(--color-surface-950);
 	--base-font-color-dark: var(--color-surface-50);
-	--base-font-family: 'Cabin', sans-serif;
+	--font-sans: "Cabin", "sans-serif";
 	--base-font-size: inherit;
 	--base-line-height: inherit;
 	--base-font-weight: normal;
@@ -12,7 +12,7 @@
 	--base-letter-spacing: 0em;
 	--heading-font-color: inherit;
 	--heading-font-color-dark: inherit;
-	--heading-font-family: 'Nunito', serif;
+	--font-serif: "Nunito", "sans-serif";
 	--heading-font-weight: bold;
 	--heading-font-style: normal;
 	--heading-letter-spacing: inherit;
@@ -227,68 +227,23 @@
 	--elevation5: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
 }
 
-html,
-body {
-	margin: 0;
-	max-height: 100%;
-	padding: 0;
-	box-sizing: border-box;
-
-	background:
-		radial-gradient(circle at 34.01% 74.12%, #82915f, transparent 69%),
-		radial-gradient(circle at 18.44% 19.3%, #809591, transparent 100%),
-		radial-gradient(circle at 71.72% 39.04%, #8f9283, transparent 100%),
-		radial-gradient(circle at 50% 50%, #ffffff, #ffffff 100%);
-
-	background-attachment: fixed;
-}
-
-main {
-	margin: 0 138px;
-}
-
-body,
-span {
-	font-family: var(--ff-sans);
-	font-weight: var(--fw-400);
-	font-size: var(--fs-300);
-	color: var(--text);
-}
-
-h1,
-h2,
-h3,
-h4,
-h5 {
-	font-family: var(--ff-serif);
-	font-weight: 700;
-}
-
-html {
-	font-size: 100%;
-} /* 16px */
-
-h1 {
-	font-size: var(--fs-800);
-	color: var(--onPrimary);
-}
-
-h2 {
-	font-size: var(--fs-700);
-	color: var(--onPrimary);
-}
-
-h3 {
-	font-size: var(--fs-600);
-	color: var(--onPrimary);
-}
-
-h4 {
-	font-size: var(--fs-500);
-	color: var(--onPrimary);
-}
-
-h5 {
-	font-size: var(--fs-400);
-	color: var(--onPrimary);
+@layer base {
+  h1 {
+    font-size: calc(6rem*1.125);
+  }
+  h2 {
+    font-size: calc(5rem*1.125);
+  }
+  h3 {
+    font-size: calc(4rem*1.125);
+  }
+  h4 {
+    font-size: calc(3rem*1.125);
+  }
+  h5 {
+    font-size: calc(2rem*1.125);
+  }
+  h6 {
+    font-size: calc(1rem*1.125);
+  }
 }
